# vstr

./: CMakeLists.txt  README.md  main.c
src/: main.c  vstr.h  vstring.h
